<resources>
    <string name="app_name">Vinilos_Grupo27</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"></string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="album_label">Albumes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_albums">Albumes</string>
    <string name="title_tracks">Cancion</string>

    <string name="title_albumDetail">Detalle Álbum</string>

    <string name="title_collectorDetail">Detalle Coleccionista</string>

    <string name="title_artistDetail">Detalle Artista</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_musicians">Artistas</string>
    <string name="vinilos">Vinilos</string>
    <string name="artistas">Artistas</string>
    <string name="albumes">Álbumes</string>

    <string name="image">Image</string>
    <string name="coleccionistas">Coleccionistas</string>
    <string name="imageAlbumDetail">Imagen de la portada del álbum</string>
    <string name="imageArtistDetail">Foto del artista</string>

    <string name="hello_second_blank_fragment">Hello second_blank fragment</string>
    <string name="title_collectores">Coleccionistas</string>

    <string name="crear_albumes">Crear Album</string>
    <string name="genre">Genre</string>
    <string-array name="Genres">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string name="RecordLabel">Record Label</string>
    <string-array name="RecordLabels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
</resources>