...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="112dp"
        android:background="#F4F5FB"
        android:capitalize="none"
        android:shadowColor="@color/black"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:background="#F4F5FB"
        android:capitalize="none"
        android:shadowColor="@color/black"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_third"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="172dp"
        android:background="#F4F5FB"
        android:shadowColor="@color/black"
        android:shadowDx="1"
...
